// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API: LSK Transactions createTransactionObject creates a transaction object for delegate registration transaction 1`] = `
Object {
  "asset": Object {
    "username": "username",
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 5,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for reclaimLSK transaction 1`] = `
Object {
  "asset": Object {
    "amount": 10000000n,
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 1000,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for transfer transaction 1`] = `
Object {
  "asset": Object {
    "amount": 1n,
    "data": "test",
    "recipientAddress": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 1000000n,
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions createTransactionObject creates a transaction object for vote transaction 1`] = `
Object {
  "asset": Object {
    "votes": Array [
      Object {
        "amount": 100n,
        "delegateAddress": Object {
          "data": Array [
            208,
            70,
            153,
            229,
            124,
            74,
            56,
            70,
            201,
            136,
            243,
            193,
            83,
            6,
            121,
            111,
            142,
            174,
            92,
            28,
          ],
          "type": "Buffer",
        },
      },
      Object {
        "amount": -100n,
        "delegateAddress": Object {
          "data": Array [
            183,
            120,
            252,
            149,
            185,
            240,
            116,
            7,
            230,
            64,
            157,
            115,
            200,
            175,
            25,
            25,
            217,
            3,
            80,
            2,
          ],
          "type": "Buffer",
        },
      },
    ],
  },
  "assetID": 1,
  "fee": 1000000n,
  "moduleID": 5,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [],
    "type": "Buffer",
  },
  "signatures": Array [],
}
`;

exports[`API: LSK Transactions transformTransaction should a register delegate transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "username": "super_delegate",
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "5:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should a transfer transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "amount": "100000000",
    "data": "",
    "recipient": Object {
      "address": "lskzzzz3xu4xpzz6x2zzuzzbvzpz2zzrvz3zzxuzz3mzozzox24z2zzuzzzzzvuzz3z577dz7",
    },
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "2:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should a vote delegate transaction with type signature of lisk service 1`] = `
Object {
  "asset": Object {
    "votes": Array [
      Object {
        "amount": 100,
        "delegateAddress": "lskzpxzckpryh",
      },
    ],
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "5:1",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;

exports[`API: LSK Transactions transformTransaction should transform a reclaimLSK transaction 1`] = `
Object {
  "asset": Object {
    "amount": "100",
  },
  "fee": "0.1",
  "id": "12",
  "moduleAssetId": "1000:0",
  "nonce": "1",
  "sender": Object {
    "address": "lskdxc4ta5j43jp9ro3f8zqbxta9fn6jwzjucw7yt",
    "publicKey": "0fe9a3f1a21b5530f27f87a414b549e79a940bf24fdf2b2f05e7f22aeeecc86a",
  },
  "signatures": undefined,
}
`;
